# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.433 2005/12/08 03:17:11 wolf31o2 Exp $

  08 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> files/catalyst.conf:
  Turning off autoresume of doom until I can get more testing. I've had
  several issues with it. I'll be reporting/fixing these as I come across them
  but for now wish to turn it off by default as I don't want this one feature
  to stop the possible 2.0 final release.

  07 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/unmerge.sh:
  Removed profiles hack from livecd-stage2's unmerge, since it isn't used
  anymore and probably should have been removed a long time ago when the new
  code was put into place in livecdfs-update.sh and livecd-local.start
  instead.

  07 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/stage1/stage1-chroot.sh, targets/stage2/stage2-chroot.sh,
  targets/stage3/stage3-chroot.sh, targets/stage4/stage4-chroot.sh:
  Made EMERGE_WARNING_DELAY=0 for all stages.  This is 2.0_rc7.

  07 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/generic_target.py:
  self.env should be a part of the super class generic_target so it applies to
  snapshots as well; removing redundant pass in the generic_target class as
  its not needed. There is code there to fill the statements

  07 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Forward-porting portage tmpfs mounting from catalyst 1.x, otherwise we break
  the Installer.

  07 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Changed version stamp to 2.0_rc6.

  07 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix for unpack cases

  05 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fixes for env
